# Science_ball

./: .env.example  .gitignore  Makefile  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py  settings.py
backend/app/api/: router.py
backend/app/api/routes/: answers.py  documents.py  facts.py  health.py  ingestion.py
backend/app/repositories/: __init__.py  audit_logs.py  documents.py  entities.py  facts.py  ingestion_jobs.py
backend/app/schemas/: __init__.py  answers.py  confidence.py  documents.py  facts.py  ingestion.py
backend/app/search/: __init__.py  index_manager.py  index_names.py  mappings.py
backend/app/services/: __init__.py
backend/app/services/answers/: __init__.py  answer_service.py  prompt_builder.py
backend/app/services/ingestion/: document_upload_service.py  job_service.py
backend/app/services/nlp/: __init__.py  confidence_service.py  dictionaries.py  entity_extraction_service.py  entity_extractor.py
backend/app/services/review/: fact_review_service.py
backend/app/worker/: celery_app.py  tasks.py
backend/docs/: HANDOFF.md
backend/rd_knowledge_map_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/unit/: test_answer_service.py  test_confidence_service.py  test_document_upload_service.py  test_elasticsearch_mappings.py  test_entity_extractor.py  test_fact_review_service.py  test_health.py
docs/: ACCEPTANCE_TEMPLATE.md  AI_RULES.md  HANDOFF.md  HANDOFF.md}<tool_call|><tool_call|>-response:Write{value:  IMPLEMENTATION_PLAN.md  QUALITY_CONTROL.md  SDD.md
docs_on_russia/: ACCEPTANCE_TEMPLATE.md  AI_RULES.md  HANDOFF.md  (+3 more)
(+39 files in other folders)
