[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rd-knowledge-map-backend"
version = "0.1.0"
description = "R&D Knowledge Map — FastAPI backend"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2,<3.0",
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "elasticsearch[async]>=8.12,<9.0",
    "neo4j>=5.18,<6.0",
    "minio>=7.2,<8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "alembic>=1.13,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
